--- a/requirements.txt
+++ b/requirements.txt
@@ -1,205 +1,11 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-# created-by: conda 25.5.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.9.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==3.0.0
-async-lru==2.0.4
-attrs==24.3.0
-babel==2.16.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.3.2
-chromadb==1.0.15
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.1
-dataclasses-json==0.6.7
-debugpy==1.8.11
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-durationpy==0.10
-executing==0.8.3
-fastapi==0.116.1
-filelock==3.18.0
-filetype==1.2.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.7.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-genai==1.27.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.74.0
-grpcio-status==1.71.2
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.0
-humanfriendly==10.0
-idna==3.7
-importlib-metadata==8.7.0
-importlib-resources==6.5.2
-ipykernel==6.29.5
-ipython==9.1.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.5
-jedi==0.19.2
-jinja2==3.1.6
-jiter==0.10.0
-json5==0.9.25
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.0
-jsonschema-specifications==2023.7.1
-jupyter==1.1.1
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_console==6.6.3
-jupyter_core==5.8.1
-jupyter_events==0.12.0
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
-kubernetes==33.1.0
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.72
-langchain-google-genai==2.0.10
-langchain-openai==0.3.28
-langchain-text-splitters==0.3.9
-langsmith==0.4.8
-markdown-it-py==3.0.0
-markupsafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.1.2
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.6.3
-mypy-extensions==1.1.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.4.4
-notebook-shim==0.2.4
-numpy==2.0.1
-oauthlib==3.3.1
-onnxruntime==1.22.1
-openai==1.97.1
-opentelemetry-api==1.35.0
-opentelemetry-exporter-otlp-proto-common==1.35.0
-opentelemetry-exporter-otlp-proto-grpc==1.35.0
-opentelemetry-proto==1.35.0
-opentelemetry-sdk==1.35.0
-opentelemetry-semantic-conventions==0.56b0
-orjson==3.11.0
-overrides==7.4.0
-packaging==24.2
-pandocfilters==1.5.0
-parso==0.8.4
-pip==25.1
-platformdirs==4.3.7
-posthog==5.4.0
-prometheus_client==0.21.1
-prompt-toolkit==3.0.43
-prompt_toolkit==3.0.43
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==5.26.1
-psutil==5.9.0
-pure_eval==0.2.2
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pybase64==1.4.1
-pycparser==2.21
-pydantic==2.11.7
-pydantic-core==2.33.2
-pydantic-settings==2.10.1
-pygments==2.19.1
-pyparsing==3.2.3
-pypdf==5.8.0
-pypika==0.48.9
-pyproject-hooks==1.2.0
-pyreadline3==3.5.4
-pysocks==1.7.1
-python-dateutil==2.9.0post0
-python-dotenv==1.1.1
-python-json-logger==3.2.1
-pywinpty==2.0.15; sys_platform == "win32"
-pyyaml==6.0.2
-pyzmq==26.2.0
-qtconsole==5.6.1
-referencing==0.30.2
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.1.0
-rpds-py==0.22.3
-rsa==4.9.1
-send2trash==1.8.2
-setuptools==78.1.1
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.0
-soupsieve==2.5
-sqlalchemy==2.0.41
-stack_data==0.2.0
-starlette==0.47.2
-sympy==1.14.0
-tenacity==8.5.0
-terminado==0.17.1
-tiktoken==0.9.0
-tinycss2==1.4.0
-tokenizers==0.21.2
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.16.0
-typing-extensions==4.14.1
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.35.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-wheel==0.45.1
-widgetsnbextension==4.0.13
-win_inet_pton==1.1.0
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+fastapi
+uvicorn
+langchain
+langchain-google-genai
+google-generativeai
+pypdf
+pydantic
+python-dotenv
+io 
+requests
+langchain_community
