--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "/api/main.py",
+      "src": "/app/main.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/hackrx/run",
-      "dest": "/api/main.py"
+      "dest": "/app/main.py"
     }
   ],
   "installCommand": "python3 -m pip install --no-cache-dir --upgrade pip setuptools && python3 -m pip install --no-cache-dir -r requirements.txt"
